--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -49,6 +49,7 @@ body {
   font-weight: var(--weight-body);
   line-height: 1.6;
   min-height: 100vh;
+  overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
